[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Fonts/Space_Grotesk/static/SpaceGrotesk-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Games/ReactionGame/ReactionDifficulty3.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/Space_Grotesk/SpaceGrotesk-VariableFont_wght.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.729412, 0.729412, 0.729412, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StreamTexture" id=9]
flags = 4
load_path = "res://.import/ReactionIcon.png-0c3352a6d4e2f4550d7c6685e4bfea61.stex"

[sub_resource type="DynamicFontData" id=10]
font_path = "res://Assets/Fonts/Space_Grotesk/static/SpaceGrotesk-SemiBold.ttf"

[sub_resource type="DynamicFont" id=11]
size = 90
outline_size = 1
font_data = SubResource( 10 )

[sub_resource type="DynamicFont" id=12]
size = 50
font_data = SubResource( 10 )

[sub_resource type="DynamicFont" id=13]
size = 65
font_data = SubResource( 10 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.7776, 0.88704, 0.96, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" type="Button" parent="."]
margin_left = 9.0
margin_top = 80.0
margin_right = 709.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 1 )
text = "Press when green!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer_for_reaction" type="Timer" parent="Button1"]

[node name="Timer_for_color" type="Timer" parent="Button1"]

[node name="Button2" type="Button" parent="."]
margin_left = 9.0
margin_top = 350.622
margin_right = 709.0
margin_bottom = 570.622
custom_fonts/font = SubResource( 2 )
text = "Press when green!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer2_for_reaction" type="Timer" parent="Button2"]

[node name="Timer2_for_color" type="Timer" parent="Button2"]

[node name="Button3" type="Button" parent="."]
margin_left = 9.0
margin_top = 630.67
margin_right = 709.0
margin_bottom = 850.67
custom_fonts/font = SubResource( 3 )
text = "Press when green!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer3_for_reaction" type="Timer" parent="Button3"]

[node name="Timer3_for_color" type="Timer" parent="Button3"]

[node name="Statistics" type="Panel" parent="."]
margin_left = 40.0
margin_top = 950.159
margin_right = 677.0
margin_bottom = 1129.16
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerHeader" type="Label" parent="Statistics"]
margin_left = 141.068
margin_top = 11.0201
margin_right = 469.068
margin_bottom = 67.0201
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TIME TAKEN:"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Label" parent="Statistics"]
margin_left = 141.068
margin_top = 71.0201
margin_right = 469.068
margin_bottom = 161.02
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 556.0
margin_right = 100.0
margin_bottom = 625.0
custom_fonts/font = SubResource( 7 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameEnd" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="GameEnd"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.776471, 0.886275, 0.960784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="GameEnd"]
light_mask = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -460.0
margin_right = 300.0
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameEndContainer" type="VBoxContainer" parent="GameEnd"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameIcon" type="TextureRect" parent="GameEnd/GameEndContainer"]
margin_right = 720.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 400 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 9 )
expand = true
stretch_mode = 6

[node name="GameName" type="Label" parent="GameEnd/GameEndContainer"]
margin_top = 404.0
margin_right = 720.0
margin_bottom = 610.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 11 )
text = "Reaction"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeTakenMessage" type="Label" parent="GameEnd/GameEndContainer"]
margin_top = 614.0
margin_right = 720.0
margin_bottom = 820.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 12 )
text = "You took"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeTaken" type="Label" parent="GameEnd/GameEndContainer"]
margin_top = 824.0
margin_right = 720.0
margin_bottom = 1030.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 13 )
text = "## Seconds"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="timeout" from="Button1/Timer_for_color" to="." method="_on_Timer_for_color_timeout"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="timeout" from="Button2/Timer2_for_color" to="." method="_on_Timer2_for_color_timeout"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="timeout" from="Button3/Timer3_for_color" to="." method="_on_Timer3_for_color_timeout"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
